tests/ui/asm/x86_64/issue-82869.stderr
error: invalid register class `vreg`: unknown register class
  --> $DIR/issue-82869.rs:15:32
   |
LL |     asm!("add {:d}, {:d}, d0", out(vreg) c, in(vreg) a, in("d0") {
   |                                ^^^^^^^^^^^
   |
   = note: the following register classes are supported on this target: `reg`, `reg_abcd`, `reg_byte`, `xmm_reg`, `ymm_reg`, `zmm_reg`, `kreg`, `kreg0`, `mmx_reg`, `x87_reg`, and `tmm_reg`

error: invalid register class `vreg`: unknown register class
  --> $DIR/issue-82869.rs:15:45
   |
LL |     asm!("add {:d}, {:d}, d0", out(vreg) c, in(vreg) a, in("d0") {
   |                                             ^^^^^^^^^^
   |
   = note: the following register classes are supported on this target: `reg`, `reg_abcd`, `reg_byte`, `xmm_reg`, `ymm_reg`, `zmm_reg`, `kreg`, `kreg0`, `mmx_reg`, `x87_reg`, and `tmm_reg`

error: invalid register `d0`: unknown register
  --> $DIR/issue-82869.rs:15:57
   |
LL |       asm!("add {:d}, {:d}, d0", out(vreg) c, in(vreg) a, in("d0") {
   |  _________________________________________________________^
LL | |         || {};
LL | |         b
LL | |     });
   | |_____^

error: aborting due to 3 previous errors

